# high-margin-products

./: vercel.json  ТЗ для Claude Code Система непрерывного поиска высокомаржинальных продуктов.md
compass/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
compass/apps/api/: Dockerfile  alembic.ini  pyproject.toml
compass/apps/api/alembic/: env.py
compass/apps/api/alembic/versions/: 001_initial_schema.py  002_seed_sources.py  003_seed_agent_settings.py  004_committee_tables.py  005_multitenancy.py
compass/apps/api/app/: main.py
compass/apps/api/app/core/: auth.py  config.py  database.py  redis.py
compass/apps/api/app/models/: __init__.py  agent.py  base.py  hypothesis.py  organization.py  signal.py  source.py
compass/apps/api/app/repositories/: agent.py  base.py  hypothesis.py  signal.py  source.py
compass/apps/api/app/schemas/: agent.py  hypothesis.py  signal.py  source.py
compass/apps/api/app/services/: ai_gateway.py
compass/apps/api/tests/: conftest.py  test_ai_gateway.py  test_hypothesis_repo.py  test_routes_hypotheses.py  test_synthesizer.py
compass/apps/web/: next.config.ts  package.json  tailwind.config.ts
compass/apps/web/src/: middleware.ts
compass/apps/web/src/app/: globals.css  layout.tsx
compass/apps/worker/: Dockerfile  pyproject.toml
compass/apps/worker/worker/: graph_runner.py  main.py  pipeline.py  resurrection.py
compass/docs/adr/: 001-tech-stack.md
compass/docs/agents/: curator.md  scout.md
compass/infra/github/: ci.yml
compass/infra/supabase/: rls_policies.sql  schema.sql
(+57 files in other folders)
