[project]
name = "compass-worker"
version = "0.1.0"
description = "Compass arq worker — background tasks and agent pipeline"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
